samples/_failures_safe/1761305740_6c5313_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c4926122.c: In function ‘main’:
./samples/SAFE/__tmp_c4926122.c:150:9: error: expected declaration or statement at end of input
  150 |         printf("Choose option: ");
      |         ^~~~~~
./samples/SAFE/__tmp_c4926122.c:150:9: error: expected declaration or statement at end of input
